# generator_zadan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  apt.txt  pyproject.toml  requirements.txt
docs/: Makefile  calki_nieoznaczone.ipynb  calki_oznaczone.ipynb  calki_podwojne.ipynb  changelog.md  conf.py  example.ipynb  generuj_zestaw.ipynb  geometria_analityczna.ipynb  granice.ipynb  index.md  liczby_zespolone.ipynb  macierze.ipynb  make.bat  monotonicznosc.ipynb  styczna_normalna.ipynb  szeregi_Fouriera.ipynb  uklady_rownan.ipynb
src/generator_zadan/: __init__.py  generuj_algebra.py  generuj_analiza.py  generuj_test_nowego_zadania.py  sprawdz_roznorodnosc.py
src/generator_zadan/generatory/: __init__.py  calki_nieoznaczone.py  calki_oznaczone.py  calki_podwojne.py  calki_podwojne_bez_wykresow.py  generuj_zestaw.py  geometria_analityczna.py  granice.py  macierze.py  monotonicznosc.py  szeregi_Fouriera.py  uklady_rownan_liniowych.py  zespolone.py
src/generator_zadan/generatory/gotowe/: calka_nieoznaczona_typ_3.pickle  calka_oznaczona_typ_3.pickle  calka_oznaczona_typ_4.pickle  dzialania_zespolone.pickle  macierz_wyznacznik_parametr_wymiar_4.pickle  monotonicznosc_typ_2.pickle  monotonicznosc_typ_3.pickle  odleglosc_prostych_skosnych.pickle  uklad_Cramera_wymiar_6.pickle  wyznacznik_parametr_wymiar_3.pickle
tests/: test_generator_zadan.py
